Fix for scrollbar from submit input types

--- a/assets/styles/abstracts/mixins/_button.scss
+++ b/assets/styles/abstracts/mixins/_button.scss
@@ -10,7 +10,7 @@
   display: inline-block;
   font-weight: 600;
   line-height: map-get($line-height, 'small');
-  max-width: 100%; // Fix for wide button inputs that will cause a scrollbar
+  white-space: normal; // Fix for wide button inputs that won't flow to the next line
   padding: 1em 1.5em;
   text-decoration: none;
   text-transform: uppercase;
